<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_title"
            android:textSize="24sp"
            android:layout_weight="30"/>
        <TextView
            android:id="@+id/scoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/score_title"
            android:textSize="24sp"
            android:layout_weight="20"/>
        <TextView
            android:id="@+id/guessedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guessed_title"
            android:textSize="24sp"
            android:layout_weight="30"/>
    </LinearLayout>
    <ListView
        android:id="@+id/itemsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>