<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="fill_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical"
        android:background="@color/colorGameGrey">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            card_view:srcCompat="@drawable/professor_oak"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">
        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newPlayerTextView"
                android:textSize="25dp"
                android:textColor="#FFF"/>

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/playerNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newPlayerEditTextHint"
                android:singleLine="true"
                android:textSize="25dp"
                android:textColor="#FFF"/>
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnContinue"
                style="@style/upperPokeballButton"/>
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCancel"
                style="@style/lowerPokeballButton"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>